<resources>
    <string name="app_name">Just Java</string>
    <string name="name_hint">Name</string>
    <string name="toppings_label">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity_label">Quantity</string>
    <string name="initial_quantity">0</string>
    <string name="order_label">Order</string>
    <string name="price_label">Order Summary</string>
    <string name="initial_price">$0</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
</resources>
